Test_ResourceRemote fixed

--- a/force-app/main/tests/classes/Test_ResourceRemote.cls
+++ b/force-app/main/tests/classes/Test_ResourceRemote.cls
@@ -1,4 +1,4 @@
-@IsTest(IsParallel=true)
+@IsTest
 public class Test_ResourceRemote {
 
     @TestSetup
@@ -21,50 +21,31 @@ public class Test_ResourceRemote {
 
     @IsTest
     public static void setResourceAction_ActionExist_Test() {
-
-        List<Participant__c> participants = [SELECT Id FROM Participant__c];
-        System.assertEquals(1, participants.size());
+        TestData.loadTestData();
         List<Resource__c> resources = [SELECT Id FROM Resource__c];
-        System.assertEquals(1, resources.size());
-        ParticipantService.ParticipantState pState = new ParticipantService.ParticipantState();
-        pState.participant = participants[0];
-
-        ClassFactory.clearStubTypesByClassNamesMap();
-        ClassFactory.putStubTypeByClassName(ParticipantService.class, StubBuilder.newInstance(ParticipantService.class)
-                .when('getState')
-                .then(pState)
-                .build()
-       );
+        delete [SELECT Id FROM Resource_Action__c];
 
         Test.startTest();
-        ResourceRemote.setResourceAction(resources[0].Id, true, true);
+        System.runAs(new TestData().participantUser){
+            ResourceRemote.setResourceAction(resources[0].Id, true, true);
+        }
         Test.stopTest();
 
-        List<Resource_Action__c> actions = [SELECT Id, IsFavorite__c, IsVoted__c FROM Resource_Action__c LIMIT 1];
+        List<Resource_Action__c> actions = [SELECT Id, IsFavorite__c, IsVoted__c FROM Resource_Action__c];
         System.assertEquals(true, actions[0].IsVoted__c);
         System.assertEquals(true, actions[0].IsFavorite__c);
     }
 
     @IsTest
     public static void setResourceAction_ActionDoesNotExist_Test() {
-
-        List<Participant__c> participants = [SELECT Id FROM Participant__c];
-        System.assertEquals(1, participants.size());
-        List<Resource__c> resources = [SELECT Id FROM Resource__c];
-        System.assertEquals(1, resources.size());
+        TestData.loadTestData();
         delete [SELECT Id FROM Resource_Action__c];
-        ParticipantService.ParticipantState pState = new ParticipantService.ParticipantState();
-        pState.participant = participants[0];
-
-        ClassFactory.clearStubTypesByClassNamesMap();
-        ClassFactory.putStubTypeByClassName(ParticipantService.class, StubBuilder.newInstance(ParticipantService.class)
-                .when('getState')
-                .then(pState)
-                .build()
-       );
+        List<Resource__c> resources = [SELECT Id FROM Resource__c];
 
         Test.startTest();
-        ResourceRemote.setResourceAction(resources[0].Id, true, true);
+        System.runAs(new TestData().participantUser){
+            ResourceRemote.setResourceAction(resources[0].Id, true, true);
+        }
         Test.stopTest();
 
         List<Resource_Action__c> actions = [SELECT Id, IsFavorite__c, IsVoted__c FROM Resource_Action__c LIMIT 1];
@@ -106,7 +87,7 @@ public class Test_ResourceRemote {
         Test.stopTest();
 
         System.assert(container.errorMessage.equalsIgnoreCase(Label.Resources_No_Favorite_Articles));
-        System.assert(container.wrappers == null);
+        System.assert(container.wrappers.isEmpty());
     }
 
     @IsTest
@@ -165,7 +146,8 @@ public class Test_ResourceRemote {
 
     @IsTest
     public static void getTrialId_Positive_Test() {
-
+        TestData.loadTestData();
+        TestData testData = new TestData();
         ClassFactory.clearStubTypesByClassNamesMap();
         ClassFactory.putStubTypeByClassName(ResourceService.class, StubBuilder.newInstance(ResourceService.class)
                 .when('getParticipantState')
@@ -173,7 +155,11 @@ public class Test_ResourceRemote {
                 .build()
        );
         Test.startTest();
-        String trialId = ResourceRemote.getTrialId();
+        String trialId;
+        System.runAs(testData.participantUser)
+        {
+            trialId = ResourceRemote.getTrialId();
+        }
         Test.stopTest();
         System.assert(String.isNotBlank(trialId));
     }
@@ -220,22 +206,26 @@ public class Test_ResourceRemote {
 
     @IsTest
     public static void getNoTAMessage_AlumniPatient_Test() {
+        TestData.loadTestData();
+        TestData testData = new TestData();
 
-        ClassFactory.clearStubTypesByClassNamesMap();
-        ClassFactory.putStubTypeByClassName(ResourceService.class, StubBuilder.newInstance(ResourceService.class)
-                .when('getParticipantState')
-                .then(Test_ResourceRemote.getAlumniState())
-                .build()
-       );
+        testData.pe.Participant_Status__c = PEStatusState.PE_STATUS_GROUP_ALUMNI.get(0);
+        update testData.pe;
+
         Test.startTest();
-        String noTAMessage = ResourceRemote.getNoTAMessage();
+        String noTAMessage;
+        System.runAs(testData.participantUser)
+        {
+            noTAMessage = ResourceRemote.getNoTAMessage();
+        }
         Test.stopTest();
         System.assert(noTAMessage.containsIgnoreCase(Label.Resources_Go_To_Your_Profile));
     }
 
     @IsTest
     public static void getNoTAMessage_NotAlumniPatient_Test() {
-
+        TestData.loadTestData();
+        TestData testData = new TestData();
         ClassFactory.clearStubTypesByClassNamesMap();
         ClassFactory.putStubTypeByClassName(ResourceService.class, StubBuilder.newInstance(ResourceService.class)
                 .when('getParticipantState')
@@ -243,7 +233,11 @@ public class Test_ResourceRemote {
                 .build()
        );
         Test.startTest();
-        String noTAMessage = ResourceRemote.getNoTAMessage();
+        String noTAMessage;
+        System.runAs(testData.participantUser)
+        {
+            noTAMessage = ResourceRemote.getNoTAMessage();
+        }
         Test.stopTest();
         System.assert(noTAMessage == null);
     }
