--- a/force-app/main/default/classes/TrialService.cls
+++ b/force-app/main/default/classes/TrialService.cls
@@ -34,6 +34,7 @@ public without sharing class TrialService {
             'Interventions__c',
             'Profile_Picture__c',
             'Share_URL__c',
+            'Patient_Portal_Enabled__c',
             'Therapeutic_Area__r.Name'
     };
     
