--- a/force-app/main/tests/classes/Test_TrialSurveyTriggerHandler.cls
+++ b/force-app/main/tests/classes/Test_TrialSurveyTriggerHandler.cls
@@ -21,7 +21,8 @@ private class Test_TrialSurveyTriggerHandler {
         );
         insert ts;
 
-        SurveyInvitation invitation = SurveyService.getInstance().generateInvitation(ts, testData.pe.Id);
+        SurveyInvitation invitation = SurveyService.getInstance()
+                .generateInvitation(ts, testData.pe.Id, CommunityService.getCommunityId(null));
         insert invitation;
         TaskService.getInstance().createSurveyTasks(new Map<Id, String>{invitation.Id => 'Patient only'});
 
