add permission sets

--- a/force-app/main/tests/classes/Test_IntegrationPatientReferralHandler.cls
+++ b/force-app/main/tests/classes/Test_IntegrationPatientReferralHandler.cls
@@ -71,6 +71,18 @@ private class Test_IntegrationPatientReferralHandler {
                 Study_Site_Number__c = 'SS1'
         );
         insert studySite;
+    
+        Study_Site__c studySite2 = new Study_Site__c(
+                Principal_Investigator__c = piContact.Id,
+                Clinical_Trial_Profile__c = study.Id,
+                Override_PI_Referral_Status__c = StudySiteService.PI_S_INVITATION_SENT,
+                Site__c = studySiteAccount.Id,
+                Study_Site_Type__c = 'Traditional',
+                Suppress_Participant_Emails__c = false,
+                Study_Site_Number__c = 'SS2'
+        );
+        insert studySite2;
+        
         studySite.Override_PI_Referral_Status__c = StudySiteService.PI_S_ACCEPTED;
     
         Participant__c participantWithBY = new Participant__c(
@@ -149,6 +161,25 @@ private class Test_IntegrationPatientReferralHandler {
                 Referral_Sent_to_PI__c = 'Referral Sent to PI',
                 acceptedTermsAndConditions__c = '2019-10-02T10:00:00-05:00'
         );
+        
+        Integration_Patient_Referral__c ipr4 = new Integration_Patient_Referral__c(
+                Address_Country__c = 'US',
+                Address_State__c = 'New York',
+                Address_ZipCode__c = '12312',
+                birthYear__c = '1985',
+                Data_Source__c = 'PI',
+                email__c = 'leo@mail.com',
+                firstName__c = 'Leo',
+                lastName__c = 'Wide',
+                Language_Preference__c = 'en_US',
+                phone__c = '321234243',
+                protocolId__c = 'CTP1',
+                siteSelected__c = 'US_SS2',
+                Referred_Date__c  = '2019-10-02T10:00:00-05:00',
+                referralID__c = '444323423',
+                Referral_Sent_to_PI__c = 'Referral Sent to PI',
+                acceptedTermsAndConditions__c = '2019-10-02T10:00:00-05:00'
+        );
         iprList.add(ipr);
         iprList.add(ipr2);
         iprList.add(ipr3);
@@ -184,6 +215,7 @@ private class Test_IntegrationPatientReferralHandler {
         String refSource = [SELECT Id, Secondary_Source__c FROM Participant__c WHERE Email__c = 'leo@mail.com'].Secondary_Source__c;
         System.assert(refSource.contains('Autorecruitment'));
         System.assert(refSource.contains('23AndMe'));
+        System.assert(refSource.contains('PI'));
         
         
 
