--- a/force-app/main/default/classes/ManualTaskRemote.cls
+++ b/force-app/main/default/classes/ManualTaskRemote.cls
@@ -4,7 +4,7 @@
 
 public with sharing class ManualTaskRemote {
 
-    public static Boolean createTasks(Task newTask, ManualTaskFilter filter) {
+    public static Integer createTasks(Task newTask, ManualTaskFilter filter) {
         try {
             Map<Id, Participant_Enrollment__c> contactsWithPE = filter.getContactsWithPE();
             List<User> users = [
@@ -30,9 +30,9 @@ public with sharing class ManualTaskRemote {
             }
             insert tasks;
 
-            return !contactsWithPE.values().isEmpty();
+            return tasks.size();
         } catch (Exception e) {
-            return (Boolean) AuraHelper.throwException(e);
+            return (Integer) AuraHelper.throwException(e);
         }
     }
 
