--- a/force-app/main/scheduled-batch/classes/Batch_CreateSummaryNotifications.cls
+++ b/force-app/main/scheduled-batch/classes/Batch_CreateSummaryNotifications.cls
@@ -20,7 +20,7 @@ public without sharing class Batch_CreateSummaryNotifications extends Batch_Sche
                         Visible_To_Delegates__c,
                         Visible_To_Participant__c,
                         Visible_To_PI__c,
-                        Visible_To_PI__c
+                        Visible_To_RP__c
                 FROM Res_study__c
                 WHERE Notify_On_Availability__c = TRUE
                 AND Visible_To_Participant__c = TRUE
