--- a/force-app/main/default/classes/TravelVendorPanelRemote.cls
+++ b/force-app/main/default/classes/TravelVendorPanelRemote.cls
@@ -4,6 +4,9 @@
 
 public with sharing class TravelVendorPanelRemote {
 
+    private static final String READ_PERMISSION = 'Patient_Portal_Read_Study_Settings';
+    private static final String EDIT_PERMISSION = 'Patient_Portal_Edit_Study_Settings';
+
     public class InitData {
         @AuraEnabled
         public List<TravelVendor__c> vendors;
@@ -13,13 +16,36 @@ public with sharing class TravelVendorPanelRemote {
         public String selectedSSIds;
         @AuraEnabled
         public List<VendorItem> vendorItems;
+        @AuraEnabled
+        public String permission;
 
         public InitData() {
             vendors = new List<TravelVendor__c>();
             vendorItems = new List<VendorItem>();
             countryCodes = '';
             selectedSSIds = '';
+            permission = getPermissionSets();
         }
+    }
+
+    private static String getPermissionSets(){
+        String userPermission = 'disabled';
+        List<String> permissionNames = new List<String>();
+        permissionNames.add(EDIT_PERMISSION);
+        permissionNames.add(READ_PERMISSION);
+        List<PermissionSetAssignment> assignments = [
+                SELECT Id, PermissionSet.Name
+                FROM PermissionSetAssignment
+                WHERE PermissionSet.Name IN :permissionNames AND AssigneeId =: UserInfo.getUserId()];
+        for(PermissionSetAssignment assignment : assignments) {
+            if(assignment.PermissionSet.Name == EDIT_PERMISSION) {
+                userPermission = 'edit';
+                break;
+            } else if(assignment.PermissionSet.Name == READ_PERMISSION) {
+                userPermission = 'read';
+            }
+        }
+        return userPermission;
     }
 
     public class VendorItem {
@@ -67,8 +93,9 @@ public with sharing class TravelVendorPanelRemote {
     @AuraEnabled
     public static InitData getInitData(Id ctpId, Boolean isFirstLoad) {
         TravelSupportHelper supportHelper = (TravelSupportHelper) ClassFactory.newInstance(TravelSupportHelper.class);
-        InitData initData = new InitData();
+        InitData initData;
         try {
+            initData = new InitData();
             initData.countryCodes = '';
             initData.vendorItems = supportHelper.getVendorItems(null, ctpId, null, null, isFirstLoad);
             if (initData.vendorItems.isEmpty()) {
