--- a/force-app/main/tests/classes/Test_TrialItemRemote.cls
+++ b/force-app/main/tests/classes/Test_TrialItemRemote.cls
@@ -24,7 +24,7 @@ private class Test_TrialItemRemote {
     @IsTest
     static void createTrialNotification_test() {
         User usr = [SELECT Id FROM User WHERE Contact.LastName = 'HCP'];
-        Clinical_Trial_Profile__c ctp = [SELECT Id FROM Clinical_Trial_Profile__c LIMIT 1];
+        Clinical_Trial_Profile__c ctp = [SELECT Id, Name, Study_Code_Name__c FROM Clinical_Trial_Profile__c LIMIT 1];
         System.runAs(usr) {
             TrialItemRemote.createTrialNotification(ctp.Id);
         }
@@ -32,6 +32,7 @@ private class Test_TrialItemRemote {
         List<Trial_Notification__c> notifications = selectTrialNotifications();
 
         System.assertEquals(1, notifications.size());
+        System.assertEquals(ctp.Study_Code_Name__c, notifications[0].CTP_Name__c);
         System.assertEquals(ctp.Id, notifications[0].Clinical_Trial_Profile__c);
     }
 
@@ -78,6 +79,7 @@ private class Test_TrialItemRemote {
     private static List<Trial_Notification__c> selectTrialNotifications() {
         return [
                 SELECT Id
+                        , CTP_Name__c
                         , Contact__c
                         , Clinical_Trial_Profile__c
                 FROM Trial_Notification__c
