--- a/force-app/main/triggers-implementation/classes/CTPSendNotificationService.cls
+++ b/force-app/main/triggers-implementation/classes/CTPSendNotificationService.cls
@@ -4,36 +4,38 @@
 
 public with sharing class CTPSendNotificationService {
 
-    private List<Trial_Notification__c> relatedNotifications;
+    private List<Trial_Notification__c> sentNotifications;
 
-
-    public void runWorkflow(List<Clinical_Trial_Profile__c> profiles, Map<Id, Clinical_Trial_Profile__c> oldRecords) {
-        for (Trial_Notification__c notification : this.getNotificationsByCtps(profiles, oldRecords)) {
+    public void runWorkflow(List<Clinical_Trial_Profile__c> ctps, Map<Id, Clinical_Trial_Profile__c> oldRecords) {
+        Set<Id> justOpenedCtpIds = this.extractJustOpenedCtpIds(ctps, oldRecords);
+        List<Trial_Notification__c> relatedNotifications = this.getNotificationsByCtpIds(new List<Id>(justOpenedCtpIds));
+        if (relatedNotifications.isEmpty()) {
+            return;
+        }
+        for (Trial_Notification__c notification : relatedNotifications) {
             notification.Need_To_Send_Alert__c = true;
         }
-        update relatedNotifications;
+        DatabaseProxy proxy = (DatabaseProxy) ClassFactory.newInstance(DatabaseProxy.class, false);
+        proxy.updateRecords(relatedNotifications, true);
+        this.sentNotifications = relatedNotifications;
     }
 
-    public void removeSentNotifications(List<Clinical_Trial_Profile__c> profiles, Map<Id, Clinical_Trial_Profile__c> oldRecords) {
-        delete this.getNotificationsByCtps(profiles, oldRecords);
-    }
-
-    private List<Trial_Notification__c> getNotificationsByCtps(List<Clinical_Trial_Profile__c> ctps, Map<Id, Clinical_Trial_Profile__c> oldRecords) {
-        if (this.relatedNotifications == null) {
-            DatabaseProxy proxy = new DatabaseProxy();
-            List<Id> ctpIds = this.extractJustOpenedCtps(ctps, oldRecords);
-            if (ctpIds.isEmpty()){
-                this.relatedNotifications = new List<Trial_Notification__c>();
-            } else {
-                String query = 'SELECT Id FROM Trial_Notification__c WHERE Clinical_Trial_Profile__c IN (\'' + String.join(ctpIds, '\',\'') + '\')';
-                relatedNotifications = proxy.query(query);
-            }
+    public void removeSentNotifications() {
+        if (this.sentNotifications != null && !this.sentNotifications.isEmpty()) {
+            DatabaseProxy proxy = (DatabaseProxy) ClassFactory.newInstance(DatabaseProxy.class, false);
+            proxy.deleteRecords(this.sentNotifications, true);
         }
-        return relatedNotifications;
     }
 
-    private List<Id> extractJustOpenedCtps(List<Clinical_Trial_Profile__c> profiles, Map<Id, Clinical_Trial_Profile__c> oldRecords) {
-        List<Id> justOpenedCtpIds = new List<Id>();
+    public void removeRelatedTrialNotificationsOnDelete(List<Clinical_Trial_Profile__c> removedCtps) {
+        DatabaseProxy proxy = (DatabaseProxy) ClassFactory.newInstance(DatabaseProxy.class, false);
+        Set<Id> ctpIds = new Map<Id, Clinical_Trial_Profile__c>(removedCtps).keySet();
+        List<Trial_Notification__c> notifications = this.getNotificationsByCtpIds(new List<Id>(ctpIds));
+        proxy.deleteRecords(notifications, true);
+    }
+
+    private Set<Id> extractJustOpenedCtpIds(List<Clinical_Trial_Profile__c> profiles, Map<Id, Clinical_Trial_Profile__c> oldRecords) {
+        Set<Id> justOpenedCtpIds = new Set<Id>();
         TrialSearchHelper trialHelper = (TrialSearchHelper) ClassFactory.newInstance(TrialSearchHelper.class);
         for (Clinical_Trial_Profile__c profile : profiles) {
             if (trialHelper.isCtpEnrolling(profile) && !trialHelper.isCtpEnrolling(oldRecords.get(profile.Id))) {
@@ -41,6 +43,18 @@ public with sharing class CTPSendNotificationService {
             }
         }
         return justOpenedCtpIds;
+    }
+
+    private List<Trial_Notification__c> getNotificationsByCtpIds(List<Id>ctpIds) {
+        List<Trial_Notification__c> relatedNotifications = new List<Trial_Notification__c>();
+        if (!ctpIds.isEmpty()) {
+            DatabaseProxy proxy = (DatabaseProxy) ClassFactory.newInstance(DatabaseProxy.class, false);
+            String query = 'SELECT Id ' +
+                    'FROM Trial_Notification__c ' +
+                    'WHERE Clinical_Trial_Profile__c IN (\'' + String.join(ctpIds, '\',\'') + '\')';
+            relatedNotifications = proxy.query(query);
+        }
+        return relatedNotifications;
     }
 
 }
